# PanODE-DPMM

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  apply-cursor-agent-edits.prompt.md  merge_external_results.py  prompts.md  pyproject.toml  retrain_log.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
article/: README.md  build.sh
benchmarks/: README.md  __init__.py  config.py  data_utils.py  dataset_registry.py  external_model_registry.py  metrics_utils.py  model_registry.py  run_manifest.py  train_utils.py  training_dynamics.py
eval_lib/: __init__.py
experiments/: __init__.py  merge_and_visualize.py  merge_external_results.py  merge_visualize_support.py  run_external_benchmark.py
model-arch-viewer/: export.cjs  next.config.mjs  package-lock.json  package.json  screenshot_fig1.mjs  screenshot_figures.mjs  tsconfig.tsbuildinfo
models/: __init__.py  dpmm_base.py  dpmm_contrastive.py  dpmm_flow_matching.py  dpmm_transformer.py  encoders.py  pure_ae.py  shared_modules.py
refined_figures/: __init__.py  dpmm_shared.py  fig01_architecture.py  fig02_base_ablation.py  fig02_base_ablation_heatmap.py  fig02_base_ablation_old.py  fig03_dpmm_distributions.py  fig03_sensitivity.py  fig03_sensitivity_training.py  fig04_biological_full.py  fig04_training_umaps.py  fig05_biological_combined.py  fig05_crossdataset.py  fig05_external.py  fig06_biological.py  fig06_umap_enrichment_combined.py  fig07_correlation.py  fig08_latent_umap.py  fig09_enrichment.py  fig10_external.py  fig11_dpmm_diagnostics.py  fig12_dpmm_distributions.py  generate_all.py
scripts/: _stat_figure_common.py  add_extra_datasets_paragraph.py  benchmarks_refresh_figures.sh  combine_experiment_csvs.py  compose_experiment_figures.py  compute_dpmm_diagnostics.py  compute_gse_offline.py  finish_all.sh  generate_latex_tables.py  generate_nextjs_figures.py  generate_setty_importance.py  generate_statistical_figures.py  generate_statistical_figures_2seed.py  merge_pure_crossdata.py  prep_all_53_datasets.py  prep_extra_datasets.py  refresh_dpmm_fm_bio.py  refresh_figures.sh  refresh_moco_weight1_bio.py  regenerate_figures.py  repair_crossdata_csv.py  rerun_dpmm_fm_core.py  rerun_moco_weight1_core.py  rerun_pure_crossdata.sh  retrain_dpmm_transformer.py  run_dpmm_fm_sensitivity_core.py  run_full_benchmark_refresh.sh  run_missing_sensitivity.py  run_parallel_full.sh  run_single_dataset_benchmark.py  statistical_analysis.py  statistical_analysis_multiseed.py  (+4 more)
(+540 files in other folders)
