[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panode-dpmm"
version = "0.1.0"
description = "Research code for single-cell representation learning with DPMM-regularised autoencoders."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "PanODE-DPMM contributors" },
]
keywords = ["single-cell", "representation-learning", "pytorch", "benchmarking", "biology"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "seaborn>=0.13",
  "torch>=2.2",
  "torchdiffeq>=0.2",
]

[project.optional-dependencies]
bio = [
  "anndata>=0.10",
  "scanpy>=1.10",
]
graph = [
  "torch-geometric>=2.5",
]
dev = [
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/PeterPonyu/PanODE-DPMM"
Repository = "https://github.com/PeterPonyu/PanODE-DPMM"
Issues = "https://github.com/PeterPonyu/PanODE-DPMM/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarks*", "eval_lib*", "experiments*", "models*", "refined_figures*", "src*", "utils*", "vcd*"]
exclude = ["tests*", "model-arch-viewer*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = [
  "E501",   # line length enforced by formatter
  "B905",   # zip() strict= — ML code iterates matched tensors/arrays by construction
  "B028",   # warnings.warn stacklevel — internal research library
  "B008",   # torch.Size/torch.device in defaults — idiomatic PyTorch pattern
]

[tool.ruff.lint.per-file-ignores]
# Scripts and benchmarks use sys.path.insert before imports for portability
"benchmarks/**" = ["E402"]
"experiments/**" = ["E402"]
"refined_figures/**" = ["E402"]
"scripts/**" = ["E402"]
"vcd/**" = ["E402"]
"eval_lib/experiment/templates/**" = ["E402"]
"eval_lib/viz/**" = ["E402"]
